# libgenaro-java

./: .gitignore  .travis.yml  README.md  Todo.txt  build.gradle  pom.xml  settings.gradle
MockBridgeFarmer-C/: CMakeLists.txt  README.md  main.c
gradle/wrapper/: gradle-wrapper.properties
mockBridgeFarmer-c/: .gitignore  CMakeLists.txt  genarotests.h  mockfarmer.c
src/main/java/: log4j2-test.xml
src/main/java/com/backblaze/erasure/: CodingLoop.java  ReedSolomon.java
src/main/java/network/genaro/storage/: BasicUtil.java  BridgeApi.java  Bucket.java  Cli.java  CryptoUtil.java  DownloadResponseBody.java  Downloader.java  EncryptionInfo.java  Farmer.java  File.java  FileUtils.java  Frame.java  Genaro.java  GenaroCallback.java  GenaroException.java  GenaroFile.java  GenaroRuntimeException.java  GenaroWallet.java  JavaCli.java  Parameters.java  Pointer.java  Progress.java  UploadRequestBody.java  Uploader.java  cryptoUtil.java
src/test/java/network/genaro/storage/: TestBridgeApi.java  TestCryptoUtil.java  TestGenaro.java  VerifyCryptoUtil.java  VerifyGenaro.java
src/test/resources/: log4j2-test.xml
